test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_fn/src/main.sw
script;

fn main() {
    __test()
}

fn __test() {
}
